#48: Prevent stretching rating stars

--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -22,6 +22,7 @@
   justify-content: space-between;
   align-self: center;
   margin-bottom: 10px;
+  align-items: center;
 }
 
 .food-item-rating p {
